force-app/main/default/objects/BrillioFC__Access_Right__c/BrillioFC__Access_Right__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Access Right</label>
    <nameField>
        <label>ForceClinic Access Rights Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Access Rights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>