force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__Create__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create</label>
    <type>Checkbox</type>
</CustomField>