force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__Delete__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>