force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__Edit__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>