force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__Modify_All__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Modify_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify All</label>
    <type>Checkbox</type>
</CustomField>