force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__Object_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Detail__c</fullName>
    <label>Object Name</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Access Rights</relationshipLabel>
    <relationshipName>Access_Rights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>