force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__PermissionSet_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__PermissionSet_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PermissionSet Detail</label>
    <referenceTo>BrillioFC__PermissionSet_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Access Rights</relationshipLabel>
    <relationshipName>Access_Rights</relationshipName>
    <type>Lookup</type>
</CustomField>