force-app/main/default/objects/BrillioFC__Access_Right__c/fields/BrillioFC__Read__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>